2002-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/beam-concave.ly: Add to-be-considered-concave
	beam.

	* lily/beam.cc (check_concave): Add check for large gap between an
	inner notehead and the line through outer noteheads.

	* scm/grob-description.scm (Beam): Add concaveness-gap, default
	value 2.0 staff-space.
	
	* scm/grob-property-description.scm (concaveness-gap): Add
	description.

2002-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mozart-hrn3-allegro.ly: Fix typo.

2002-03-31  Juergen Reuter  <reuter@ipd.uka.de>

	* scm/ps.scm, ps/music-drawing-routines.ps, lily/lookup.cc,
	lily/note-head-engraver: improved implementation of roundfilledbox
	(according to Han-Wen's request)

	* lily/include/spacing-spanner.hh, lily/spacing-spanner.cc,
	lily/gourlay-breaking.cc, lily/staff-symbol.cc,
	lily/simple-spacer.cc: ragged-right alignment

2002-03-29  Han-Wen  <hanwen@cs.uu.nl>

	* input/regression/spacing-note-flags.ly: new file

	* input/regression/spacing-rest.ly: new file

	* mf/feta-eindelijk.mf: make bbox of quarter rest tighter.

	* lily/spacing-spanner.cc (note_spacing): make note spacing after
	all grace notes tight (not only the column directly following a
	grace note).

	* scm/grob-description.scm (all-grob-descriptions): don't make
	mm-rests larger than normal.

	* mf/feta-banier.mf: make upflag narrower. Make end of flag more
	curved. Remove white space at the right of flags.

2002-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ports/ports.make: Bugfix: ignore CVS directories.

	* stepmake/.cvsignore: New file.

2002-03-28  Han-Wen  <hanwen@cs.uu.nl>

	* lily/note-spacing.cc (stem_dir_correction): don't correct when
	there is a flag on the stem.

	* lily/multi-measure-rest.cc (brew_molecule): variable width molecule.

	* scm/grob-property-description.scm (measure-length):
	measure-length grob property.

	* lily/spacing-spanner.cc (standard_breakable_column_spacing):