@@ -707,7 +707,6 @@
     (StaffSymbol
      . (
 	(molecule-callback . ,Staff_symbol::brew_molecule)
-	(staff-space . 1.0)
 	(line-count . 5)
 	(layer . 0)
 	(meta . ((interfaces . (staff-symbol-interface))))
