@@ -1,3 +1,10 @@
+2002-04-01  Han-Wen  <hanwen@cs.uu.nl>
+
+	* lily/staff-symbol.cc (brew_molecule): make line thickness
+	adjustable.
+
+	* lily/*.cc: replace stafflinethickness by linethickness.
+
 2002-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* input/regression/beam-concave.ly: Add to-be-considered-concave
@@ -11,8 +18,6 @@
 	
 	* scm/grob-property-description.scm (concaveness-gap): Add
 	description.
-
-2002-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* input/mozart-hrn3-allegro.ly: Fix typo.
 
